# MediCloud.Streaming

./: .clang-format  CMakeLists.txt  README.md  settings.json
src/: consumers.cpp  consumers.h  main.cpp  rabbitmq_client.h  srt_downloader.cpp  srt_downloader.h  srt_input.cpp  util.h
src/messaging/: messages.cpp  messages.h  rabbitmq_client.cpp  rabbitmq_client.h  settings.cpp  settings.h
src/streaming/: hls_stream_ctx.cpp  hls_stream_ctx.h  ostream_ctx.cpp  ostream_ctx.h  srt_downloader.cpp  srt_downloader.h  srt_input.cpp  srt_input.h  util.cpp  util.h
